# learning-data-engineering

./: README.md
ATM_Exam/: LICENSE  README.md  requirements.txt  setup.cfg
ATM_Exam/Old/main/: ATM.py
ATM_Exam/Old/main/accounts/: AccountUsers.py  CreateAccount.py
ATM_Exam/Old/main/commands/: Balance.py  Deposit.py  Withdrawal.py
ATM_Exam/Old/main/filehandler/: EditFiles.py  OldCode.py  PrintName.py  ReadOpeningAccountData.py  ReadUserInfo.py
ATM_Exam/Old/main/messages/: AskingOption.py  QuitingMessage.py
ATM_Exam/Old/main/utils/: UtilAccountChoice.py  UtilEditBalance.py
ATM_Exam/Old/test/playcode/: testcode.py
ATM_Exam/data/: OpeningAccountsData.txt
ATM_Exam/docs/: pseudocode
ATM_Exam/docs/PseudoCode/: pseudocode.txt
ATM_Exam/docs/pseudocode/: PseudoATM
ATM_Exam/docs/pseudocode/pseudoaccount/: PseudoAccountUsers  PseudoCreateAccount
ATM_Exam/docs/pseudocode/pseudocommands/: PseudoBalance  PseudoDeposit  PseudoFloatToDollar  PseudoWithdrawal
ATM_Exam/docs/pseudocode/pseudofilderhandler/: PseudoEditFiles  PseudoPrintName  PseudoReadOpeningAccountData  PseudoReadUserInfo
ATM_Exam/docs/pseudocode/pseudomessages/: PseudoAskingOption  PseudoQuittingMessage
ATM_Exam/docs/pseudocode/pseudoutils/: PseudoUtilAccountChoice  PseudoUtilEditBalance
ATM_Exam/main/: index.py  pseudocode.txt
ATM_Exam/src/: ATMachine.py
ATM_Exam/src/main/: ATM.py  Play.py  index.py
ATM_Exam/src/main/accounts/: AccountFunctions.py  AccountUsers.py  CreateAccount.py  EditOpeningAccountsData.py  OpenOpeningAccData.py  (+1 more)
ATM_Exam/test/playcode/: testcode.py
(+64 files in other folders)
