[metadata]
name = Data Academy ATM Exam
version = 0.1.1
license = MIT License
description = Terminal ATM which allows 3 users to interact with their accounts.
long_description = file: README.rst
author = Hayden McKenzie
author_email = Haydendanielmckenzie@gmail.com 
classifiers =
    = Planning
    = Alpha

[options]
packages = find: 
package_dir = src 
include_package_data = True
install_requires =

[options.packages.find]
where = src