[metadata]
name = Data Academy ATM Exam
version = 1.1.0 - b
license = MIT License
description = Terminal ATM which allows 3 users to interact with their accounts.
long_description = file: README.rst
author = Hayden McKenzie
author_email = Haydendanielmckenzie@gmail.com 
classifiers =
    = Planning
    = Alpha
    = Beta

[options]
packages = find: 
package_dir = src 
include_package_data = True
install_requires =

[options.packages.find]
where = src